<resources>
    <!-- General information -->
    <string name="app_name" translatable="false">CatWalker</string>
    <string name="str_username" translatable="false">Username</string>

    <!-- Strings related to Navigation Drawer -->
    <string name="str_nav_new_entry">New Entry</string>
    <string name="str_nav_gallery">Gallery</string>
    <string name="str_nav_sightings">Sightings</string>
    <string name="str_nav_settings">Settings</string>
    <string name="str_nav_help">Help</string>

    <string name="str_nav_drawer_open" translatable="false">Navigation Drawer opened</string>
    <string name="str_nav_drawer_close" translatable="false">Navigation Drawer closed</string>

    <!-- Strings related to Settings -->
    <string name="str_settings_group_general">General</string>
    <string name="str_settings_username" translatable="false">Username</string>

    <string name="str_settings_group_notifications">Notifications</string>
    <string name="str_settings_push">Push Notifications</string>
    <string name="str_settings_ringtone">Ringtone</string>
    <string name="str_settings_silent">Silent</string>
    <string name="str_settings_vibrate">Vibrate</string>
    <string name="title_activity_sightings">SightingsActivity</string>
    <string name="str_settings_old_name">Old Name</string>
    <string name="str_settings_new_name">New Name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="str_register_choose_name">Choose Name</string>
    <string name="str_register_submit">Continue</string>
    <string name="str_register_add_university">or add a new one</string>
    <string name="str_settings_choose_university">Choose University</string>
    <string name="str_settings_university">University</string>
    <string name="str_register_title">Register</string>
    <string name="str_register_cat">And Cat</string>
    <string name="str_register_university">Your University</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_settings_cat">Cat</string>
    <string name="str_settings_change_cat">Change the cats name</string>
</resources>
