<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory
      android:title = "@string/str_settings_group_general" />

   <EditTextPreference
       android:capitalize="words"
       android:defaultValue="@string/str_username"
       android:inputType="textCapWords"
       android:key="@string/str_username"
       android:maxLines="1"
       android:selectAllOnFocus="true"
       android:singleLine="true"
       android:title="@string/str_settings_username" />

   <PreferenceCategory
       android:title = "@string/str_settings_group_notifications" />
   <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
   <SwitchPreference
       android:defaultValue="true"
       android:key="notifications_new_message"
       android:title="@string/str_settings_push" />

   <!-- Allows the user to choose a ringtone in the 'notification' category. -->
   <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
   <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
   <RingtonePreference
       android:defaultValue="content://settings/system/notification_sound"
       android:dependency="notifications_new_message"
       android:key="notifications_new_message_ringtone"
       android:ringtoneType="notification"
       android:title="@string/str_settings_ringtone" />

   <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
   <SwitchPreference
       android:defaultValue="true"
       android:dependency="notifications_new_message"
       android:key="notifications_new_message_vibrate"
       android:title="@string/str_settings_vibrate" />
</PreferenceScreen>
