<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_entry"
            android:icon="@drawable/ic_menu_new_entry"
            android:title="@string/str_nav_new_entry" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/str_nav_sightings" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/str_nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/str_nav_help" />
    </group>

</menu>
